mobile responsive added

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="gallery">
         <div class="photo" id="photo1">
             <img src="img/photo1.jpg" alt="Fennec Fox">
             <div class="info">
-                <h3>Fennec Fox</h3>
+                <h3 class="six-caps-regular">Fennec Fox</h3>
                 <p>India</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
@@ -19,7 +22,7 @@
         <div class="photo" id="photo2">
             <img src="img/photo2.jpg" alt="Humpback Whale">
             <div class="info">
-                <h3>Humpback Whale</h3>
+                <h3 class="six-caps-regular">Humpback Whale</h3>
                 <p>South Africa</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
@@ -27,7 +30,7 @@
         <div class="photo" id="photo3">
             <img src="img/photo3.jpg" alt="Humpback Whale">
             <div class="info">
-                <h3>common brown baboon</h3>
+                <h3 class="six-caps-regular">Common Brown Baboon</h3>
                 <p>South Africa</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
@@ -35,7 +38,7 @@
         <div class="photo" id="photo4">
             <img src="img/photo4.jpg" alt="Humpback Whale">
             <div class="info">
-                <h3>spotted deer</h3>
+                <h3 class="six-caps-regular">Spotted Deer</h3>
                 <p>Amazon</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
