--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,7 +15,7 @@
         <div class="photo" id="photo1">
             <img src="img/photo1.jpg" alt="Fennec Fox">
             <div class="info">
-                <h3 class="six-caps-regular">Fennec Fox</h3>
+                <h3 class="six-caps-regular">Fennec<br>Fox</h3>
                 <p>India</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
@@ -23,7 +23,7 @@
         <div class="photo" id="photo2">
             <img src="img/photo2.jpg" alt="Humpback Whale">
             <div class="info">
-                <h3 class="six-caps-regular">Humpback Whale</h3>
+                <h3 class="six-caps-regular">Humpback<br>Whale</h3>
                 <p>South Africa</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
@@ -31,7 +31,7 @@
         <div class="photo" id="photo3">
             <img src="img/photo3.jpg" alt="Humpback Whale">
             <div class="info">
-                <h3 class="six-caps-regular">Common Brown Baboon</h3>
+                <h3 class="six-caps-regular">Common Brown<br>Baboon</h3>
                 <p>South Africa</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
@@ -39,7 +39,7 @@
         <div class="photo" id="photo4">
             <img src="img/photo4.jpg" alt="Humpback Whale">
             <div class="info">
-                <h3 class="six-caps-regular">Spotted Deer</h3>
+                <h3 class="six-caps-regular">Spotted<br>Deer</h3>
                 <p>Amazon</p>
                 <a href="#" class="know-more">Know More &#8594;</a>
             </div>
